--- a/app/src/main/res/layout/movie_search_layout.xml
+++ b/app/src/main/res/layout/movie_search_layout.xml
@@ -16,7 +16,7 @@
         android:id="@+id/searchBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/search"
+        android:text="@string/movie_details"
         android:layout_gravity="center"/>
 
     <LinearLayout
