--- a/app/src/main/res/layout/details_activity_correct2.xml
+++ b/app/src/main/res/layout/details_activity_correct2.xml
@@ -12,7 +12,7 @@
         android:layout_margin="10dp">
 
         <ImageView
-            android:id="@+id/dposter"
+            android:id="@+id/dposter2"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginEnd="10dp" />
@@ -26,34 +26,34 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/dtitle"
+            android:id="@+id/dtitle2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp" />
 
         <TextView
-            android:id="@+id/dgenre"
+            android:id="@+id/dgenre2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp" />
 
         <TextView
-            android:id="@+id/drated"
+            android:id="@+id/drated2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/plotOfTheMovie"
+            android:id="@+id/plotOfTheMovie2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/godinaNastanka"
+            android:id="@+id/godinaNastanka2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/ratingBar2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numStars="10"
