--- a/app/src/main/res/layout/main_activity_recycler.xml
+++ b/app/src/main/res/layout/main_activity_recycler.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:text="Favorites"
+        android:text="@string/actor_details"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/searchApiButton"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
